--- a/package.json
+++ b/package.json
@@ -14,22 +14,23 @@
     "@heroicons/react": "^2.2.0",
     "@react-three/drei": "^10.7.4",
     "@react-three/fiber": "^9.3.0",
+    "autoprefixer": "^10.4.19",
     "critters": "^0.0.25",
     "next": "15.5.2",
     "node-fetch": "^3.3.2",
+    "postcss": "^8.4.38",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-hot-toast": "^2.6.0",
     "react-responsive-carousel": "^3.2.23",
     "recharts": "^3.2.1",
     "socket.io-client": "^4.8.1",
-    "swiper": "^12.0.2"
+    "swiper": "^12.0.2",
+    "tailwindcss": "^3.4.3"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
-    "@tailwindcss/postcss": "^4",
     "eslint": "^9",
-    "eslint-config-next": "15.5.2",
-    "tailwindcss": "^4"
+    "eslint-config-next": "15.5.2"
   }
 }
