--- a/backend/package.json
+++ b/backend/package.json
@@ -7,6 +7,7 @@
   "scripts": {
     "dev": "nodemon src/server.js",
     "start": "node src/server.js",
+    "build": "echo \"No build step required\" && exit 0",
     "lint": "echo 'No linter configured'"
   },
   "keywords": [
