--- a/package.json
+++ b/package.json
@@ -15,7 +15,10 @@
     "@react-three/drei": "^10.7.4",
     "@react-three/fiber": "^9.3.0",
     "autoprefixer": "^10.4.19",
+    "cloudinary": "^2.7.0",
     "critters": "^0.0.25",
+    "dotenv": "^17.2.3",
+    "mongoose": "^8.19.0",
     "next": "15.5.2",
     "node-fetch": "^3.3.2",
     "postcss": "^8.4.38",
