--- a/package.json
+++ b/package.json
@@ -15,10 +15,15 @@
     "@react-three/drei": "^10.7.4",
     "@react-three/fiber": "^9.3.0",
     "autoprefixer": "^10.4.19",
+    "class-variance-authority": "^0.7.1",
     "cloudinary": "^2.7.0",
+    "clsx": "^2.1.1",
     "critters": "^0.0.25",
     "dotenv": "^17.2.3",
+    "framer-motion": "^12.23.24",
+    "lucide-react": "^0.553.0",
     "mongoose": "^8.19.0",
+    "motion": "^12.23.24",
     "next": "15.5.2",
     "node-fetch": "^3.3.2",
     "postcss": "^8.4.38",
@@ -29,7 +34,9 @@
     "recharts": "^3.2.1",
     "socket.io-client": "^4.8.1",
     "swiper": "^12.0.2",
-    "tailwindcss": "^3.4.3"
+    "tailwind-merge": "^3.4.0",
+    "tailwindcss": "^3.4.3",
+    "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
