--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "critters": "^0.0.25",
     "dotenv": "^17.2.3",
     "framer-motion": "^12.23.24",
+    "lenis": "^1.3.15",
     "lucide-react": "^0.553.0",
     "mongoose": "^8.19.0",
     "motion": "^12.23.24",
